--- a/style.css
+++ b/style.css
@@ -28,7 +28,8 @@ header{
   color: white;
   opacity: 0.8;
   align-items: center;
-  height: 60px;
+  padding: 1em;
+  /* height: 60px; */
 }
 #img-div{
   width: 30%;
@@ -54,6 +55,7 @@ nav a:focus{
   border-left: 1px solid black;
   border-right: 1px solid black;
   color: bisque;
+  transition: all ease 0.6s;
 }
 #land{
   background-image: linear-gradient(rgba(160,62,153, 0.6),rgba(94,100,114,0.6)), url("./images/friends-581753_1920.jpg");
@@ -147,6 +149,7 @@ footer{
   flex-direction: column;
   width: 100%;
   background-color: #F8F4E3;
+  height: auto;
 }
 footer h4{
   font-size: 2rem;
@@ -164,6 +167,92 @@ footer p{
   font-size: 1.5rem;
   margin-top: 1em;
 }
+.map{
+  width: 100%;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
 iframe{
   width: 100%;
+  margin-bottom: 0;
+  padding-bottom: 0;
+  /* align-self: flex-end;
+  justify-self: flex-end; */
+}
+
+
+
+/* Menu */
+#menu-1{
+  display: flex;
+  flex-direction: column;
+}
+.menu-1-img{
+  height: 600px;
+  width: 100%;
+}
+.menu-1-img img{
+  width: 100%;
+  max-height: 100%;
+  display: block;
+  object-fit: cover;
+}
+#menu-1{
+  background-color: #E4F0D0;
+}
+.bites{
+  margin-top: 2em;
+}
+.bites h3{
+  font-size: 2.5rem;
+  color: #7A8B99;
+}
+.menu-dishes{
+  padding: 0em 1em;
+  border-bottom: 1px solid #aaa;
+}
+.bites h4{
+  color: #241623;
+  margin-top: 2em;
+  font-size: 1.5rem;
+}
+.bites p{
+  font-size: 1.2rem;
+  padding: 1.5em 1em;
+  color: #955E42;
+}
+.drinks h4{
+  padding-bottom: 2em;
+}
+
+
+
+
+/* Contacts */
+#contact-section,
+#contact-section a{
+  color: #241623;
+  font-size: 3rem;
+  text-align: center;
+}
+#contact-section{
+  height: 80vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color:#D7F9F1 ;
+}
+#facebook a{
+  color: blue;
+}
+#instagram a{
+  color: red;
+}
+#twitter a{
+  color: blue;
+}
+#contact-section a:hover,
+#contact-section a:focus{
+  color: #241623;
+  transition: all ease 0.6s;
 }
