--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ header ul{
   background-size: cover;
   background-repeat: no-repeat;
   background: linear-gradient(red);
-  height: 50vh;
+  height:450px ;
   margin: 0;
   background-attachment: fixed;
 }
@@ -226,7 +226,7 @@ iframe{
   text-align: center;
 }
 #contact-section{
-  height: 80vh;
+  height: 600px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -249,81 +249,27 @@ iframe{
 
 
 
-
-.menu-items{
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  display: none;
-  /* display: flex; */
-  flex-direction: column;
-  justify-content: space-around;
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  height: 100vh;
-  background-color: tomato;
-  align-items: center;
-  transform: translateX(-100vw);
-  transition: transform ease-in-out 0.6s;
-  opacity: 1;
-}
-.menu-items.open{
-  transform: translateX(0);
-  opacity: 1;
-}
-.menu-btn{
-  width: 90%;
-  width: 50px;
-  height: 50px;
-  cursor: pointer;
-  transition: all .5s ease-in-out;
+/* Order Section */
+.order-img-container{
   display: flex;
   align-items: center;
   justify-content: center;
-  /* background-color: aliceblue; */
-  position: relative;
-  z-index: 2;
-  display: none;
+  flex-direction: column;
+  max-width: 700px;
+  width: 95%;
+  margin: auto;
 }
-
-.menu-lines::before,
-.menu-lines::after{
-  content: "";
+.order-img{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  margin: 1em 0;
 }
-
-.menu-lines,
-.menu-lines::before,
-.menu-lines::after{
-  height: 5px;
-  position: absolute;
-  align-self: center;
-  justify-self: center;
-  background-color: aqua;
-  width: 90%;
-  border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(255,101,47,.2);
-  transition: all .5s ease-in-out;
+.order-img p{
+  font-size: 1.5rem;
+  margin: 1em auto 0.5em;
 }
-.menu-lines::before{
-  transform: translateY(-15px);
-  width: 45px;
-  
-}
-.menu-lines::after{
-  transform: translateY(15px);
-  width: 45px;
-}
-
-.menu-btn.open .menu-lines{
-  transform: translateX(-30px);
-  background-color: transparent;
-  box-shadow: none;
-}
-.menu-btn.open .menu-lines::before{
-  transform: rotate(45deg) translate(20px, -20px);
-}
-.menu-btn.open .menu-lines::after{
-  transform: rotate(-45deg) translate(20px, 20px);
+.order-img p:last-child{
+  font-weight: 900;
 }
